Updated sidebar layout

--- a/index.html
+++ b/index.html
@@ -10,17 +10,51 @@
 <body>
     <div id="dashboard">
         <div id="sidebar">
-            <h2> [Img] Dashboard</h2>
-            <p>Home</p>
-            <p>Profile</p>
-            <p>Messages</p>
-            <p>History</p>
-            <p>Tasks</p>
-            <p>Communities</p>
+            <div id="main-links">
+                <div id="primary-logo">
+                    <img class="svg" src="images/form-svgs/white-balance-sunny.svg" alt="sun-logo">
+                    <h2>Dashboard</h2>
+                </div>
+                <div>
+                    <img class="svg" src="images/form-svgs/home.svg" alt="home-logo">
+                    <p>Home</p>
+                </div>
+                <div>
+                    <img class="svg" src="images/form-svgs/account.svg" alt="account-logo">
+                    <p>Profile</p>
+                </div>
+                <div>
+                    <img class="svg" src="images/form-svgs/message-text-outline.svg" alt="message-logo">
+                    <p>Messages</p>
+                </div>
+                <div>
+                    <img class="svg" src="images/form-svgs/calendar-clock.svg" alt="history-logo">
+                    <p>History</p>
+                </div>
+                <div>
+                    <img class="svg" src="images/form-svgs/format-list-bulleted-square.svg" alt="tasks-logo">
+                    <p>Tasks</p>
+                </div>
+                <div>
+                    <img class="svg" src="images/form-svgs/account-group.svg" alt="communities-logo">
+                    <p>Communities</p>
+                </div>
+            </div>
 
-            <p>Settings</p>
-            <p>Support</p>
-            <p>Privacy</p>
+            <div id="secondary-links">
+                <div>
+                    <img class="svg" src="images/form-svgs/cog-outline.svg" alt="settings-logo">
+                    <p>Settings</p>
+                </div>
+                <div>
+                    <img class="svg" src="images/form-svgs/tooltip-question-outline.svg" alt="support-logo">
+                    <p>Support</p>
+                </div>
+                <div>
+                    <img class="svg" src="images/form-svgs/lock.svg" alt="privacy-logo">
+                    <p>Privacy</p>
+                </div>
+            </div>
         </div>
         <div id="header">
             <div id="searchbar">
