Added text cards

--- a/index.html
+++ b/index.html
@@ -79,7 +79,53 @@
                 <button>Share</button>
             </div>
         </div>
-        <div id="main-content"></div>
+        <div id="main-content">
+            Your Projects
+            <div id="cards">
+                <div class="card">
+                    <p>Super cool Projects</p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                    </p>
+                </div>
+                <div class="card">
+                    <p>Super cool Projects</p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                    </p>
+                </div>
+                <div class="card">
+                    <p>Super cool Projects</p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                    </p>
+                </div>
+                <div class="card">
+                    <p>Super cool Projects</p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                    </p>
+                </div>
+                <div class="card">
+                    <p>Super cool Projects</p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                    </p>
+                </div>
+                <div class="card">
+                    <p>Super cool Projects</p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
