Added action logo icons to each card

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                     </p>
+                    <div class="project-action">
+                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    </div>
                 </div>
                 <div class="card">
                     <p>Super cool Projects</p>
@@ -95,6 +100,11 @@
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                     </p>
+                    <div class="project-action">
+                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    </div>
                 </div>
                 <div class="card">
                     <p>Super cool Projects</p>
@@ -102,6 +112,11 @@
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                     </p>
+                    <div class="project-action">
+                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    </div>
                 </div>
                 <div class="card">
                     <p>Super cool Projects</p>
@@ -109,6 +124,11 @@
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                     </p>
+                    <div class="project-action">
+                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    </div>
                 </div>
                 <div class="card">
                     <p>Super cool Projects</p>
@@ -116,6 +136,11 @@
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                     </p>
+                    <div class="project-action">
+                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    </div>
                 </div>
                 <div class="card">
                     <p>Super cool Projects</p>
@@ -123,6 +148,11 @@
                         Lorem Ipsum is simply dummy text of the printing and
                         typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
                     </p>
+                    <div class="project-action">
+                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    </div>
                 </div>
             </div>
         </div>
