Changed dummy text in each card

--- a/index.html
+++ b/index.html
@@ -83,11 +83,8 @@
             Your Projects
             <div id="cards">
                 <div class="card">
-                    <p>Super cool Projects</p>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                    </p>
+                    <p>Super Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                     <div class="project-action">
                         <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
                         <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
@@ -95,11 +92,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <p>Super cool Projects</p>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                    </p>
+                    <p>Less Cool Project</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                     <div class="project-action">
                         <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
                         <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
@@ -107,11 +101,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <p>Super cool Projects</p>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                    </p>
+                    <p>Youtube</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                     <div class="project-action">
                         <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
                         <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
@@ -119,11 +110,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <p>Super cool Projects</p>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                    </p>
+                    <p>Impossible App</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                     <div class="project-action">
                         <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
                         <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
@@ -131,11 +119,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <p>Super cool Projects</p>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                    </p>
+                    <p>Ad Blocker</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                     <div class="project-action">
                         <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
                         <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
@@ -143,16 +128,21 @@
                     </div>
                 </div>
                 <div class="card">
-                    <p>Super cool Projects</p>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                    </p>
+                    <p>Netflix</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                     <div class="project-action">
                         <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
                         <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
                         <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
                     </div>
+                </div>
+            </div>
+            <div id="announcements">
+                <div class="announcement-card">
+                    <h2>Site Maintence</h2>
+                    <p>
+
+                    </p>
                 </div>
             </div>
         </div>
