Added announcements card

--- a/index.html
+++ b/index.html
@@ -79,70 +79,82 @@
                 <button>Share</button>
             </div>
         </div>
+
         <div id="main-content">
-            Your Projects
-            <div id="cards">
-                <div class="card">
-                    <p>Super Cool Project</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
-                    <div class="project-action">
-                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
-                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
-                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+            <div id="card-section">
+                <h2 class="header">Your Projects</h2>
+                <div id="cards">
+                    <div class="card">
+                        <p>Super Cool Project</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
+                        <div class="project-action">
+                            <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                            <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                            <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <p>Less Cool Project</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
-                    <div class="project-action">
-                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
-                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
-                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    <div class="card">
+                        <p>Less Cool Project</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
+                        <div class="project-action">
+                            <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                            <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                            <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <p>Youtube</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
-                    <div class="project-action">
-                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
-                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
-                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    <div class="card">
+                        <p>Youtube</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
+                        <div class="project-action">
+                            <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                            <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                            <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <p>Impossible App</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
-                    <div class="project-action">
-                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
-                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
-                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    <div class="card">
+                        <p>Impossible App</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
+                        <div class="project-action">
+                            <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                            <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                            <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <p>Ad Blocker</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
-                    <div class="project-action">
-                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
-                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
-                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    <div class="card">
+                        <p>Ad Blocker</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
+                        <div class="project-action">
+                            <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                            <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                            <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                        </div>
                     </div>
-                </div>
-                <div class="card">
-                    <p>Netflix</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
-                    <div class="project-action">
-                        <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
-                        <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
-                        <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                    <div class="card">
+                        <p>Netflix</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
+                        <div class="project-action">
+                            <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
+                            <img class="svg" src="images/form-svgs/trash-can-outline.svg" alt="trashcan logo">
+                            <img class="svg" src="images/form-svgs/share-all-outline.svg" alt="share logo">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div id="announcements">
-                <div class="announcement-card">
-                    <h2>Site Maintence</h2>
-                    <p>
-
-                    </p>
+            <div id="announcement-section">
+                <h2 class="header">Announcements</h2>
+                <div id="announcements">
+                    <div class="announcement-card">
+                        <h3>Site Maintence</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae.</p>
+                    </div>
+                    <div class="announcement-card">
+                        <h3>Community Share Day</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae.</p>
+                    </div>
+                    <div class="announcement-card">
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae.</p>
+                    </div>
                 </div>
             </div>
         </div>
