Added trending card

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 sunridden
             </div>
             <div id="logo-large">
-                <img class="big-logo logo" src="images/cat.png" alt="cat-icon">
+                <img class="big-logo" src="images/cat.png" alt="cat-icon">
                 <div class="greeting">
                     <p class="greeting-text">Hi there,</p>
                     <p class="name">sunridden (@sunridden)</p>
@@ -154,6 +154,32 @@
                     <div class="announcement-card">
                         <h3>Updated Privacy Policy</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="trending-section">
+                <h2 class="header trending-header">Trending</h2>
+                <div id="trending-people">
+                    <div class="trending-person">
+                        <img class="medium-logo" src="images/cat.png" alt="cat logo">
+                        <div class="role">
+                            <p class="name">@sunridden</p>
+                            <p>Admin Dashboard</p>
+                        </div>
+                    </div>
+                    <div class="trending-person">
+                        <img class="medium-logo" src="images/cat.png" alt="cat logo">
+                        <div class="role">
+                            <p class="name">@sunridden</p>
+                            <p>Admin Dashboard</p>
+                        </div>
+                    </div>
+                    <div class="trending-person">
+                        <img class="medium-logo" src="images/cat.png" alt="cat logo">
+                        <div class="role">
+                            <p class="name">@sunridden</p>
+                            <p>Admin Dashboard</p>
+                        </div>
                     </div>
                 </div>
             </div>
