Made project card titles bold

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <h2 class="header">Your Projects</h2>
                 <div id="cards">
                     <div class="card">
-                        <p>Super Cool Project</p>
+                        <h2>Super Cool Project</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                         <div class="project-action">
                             <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Less Cool Project</p>
+                        <h2>Less Cool Project</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                         <div class="project-action">
                             <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Youtube</p>
+                        <h2>Youtube</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                         <div class="project-action">
                             <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Impossible App</p>
+                        <h2>Impossible App</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                         <div class="project-action">
                             <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Ad Blocker</p>
+                        <h2>Ad Blocker</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                         <div class="project-action">
                             <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <p>Netflix</p>
+                        <h2>Netflix</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eleifend ipsum nisl, ut dictum leo dignissim vitae. Cras varius faucibus est, vitae egestas est sollicitudin sed. Pellentesque habitant morbi tristique.</p>
                         <div class="project-action">
                             <img class="svg" src="images/form-svgs/star-plus-outline.svg" alt="star logo">
